--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,11 @@
 .App {
+  display: flex;
   text-align: center;
 }
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+  height: 10vmin;
 }
 
 .App-header {
