--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -1,9 +1,13 @@
 .nav-wrapper {
-    width: 150px;
+    width: 250px;
     height: 100vh;
 }
 
 .nav-logo {
-    width: 150px;
-    height: 50px;
+    width: 250px;
+    margin-top: 20px;
+}
+
+.nav {
+    margin-left: 20px;
 }
