--- a/src/components/list.css
+++ b/src/components/list.css
@@ -1,7 +1,6 @@
 .list-item {
-    margin: 10px;
     padding: 10px;
-    border: 1px solid #bbb;
+    border-bottom: 1px solid lightgray;
     background-color: #eee;
 }
 
@@ -9,4 +8,10 @@
     font-size: 1.2em;
     text-decoration: none;
     color: #333;
+}
+
+.style-list {
+    display: flex;
+    flex-direction: column;
+    list-style-type: none;
 }
