--- a/src/components/list.css
+++ b/src/components/list.css
@@ -1,7 +1,5 @@
-.list-item {
-    padding: 10px;
-    border-bottom: 1px solid lightgray;
-    background-color: #eee;
+ul{
+    list-style-type: none;
 }
 
 .list-item div {
@@ -10,8 +8,42 @@
     color: #333;
 }
 
-.style-list {
+.list-container {
     display: flex;
     flex-direction: column;
     list-style-type: none;
+    margin-top: 10px;
+    padding: 0;
+}
+
+.nav-content .list-container .list-item {
+    padding: 5px;
+}
+
+.nav-content .list-container .list-item:hover {
+    background-color: aliceblue;
+}
+
+
+.beer-list-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    list-style-type: none;
+    margin-top: 20px;
+    margin-left: 40px;
+    padding: 0;
+}
+
+.beer-list-container .list-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+}
+
+.beer-list-container .list-container .list-item {
+    width: 200px;
+    height: 130px;
+    margin: 10px;
 }
